# aoc-2022

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
day_001/: Cargo.toml
day_001/src/: lib.rs
day_002/: Cargo.toml
day_002/src/: lib.rs
template/: Cargo.toml
template/src/: lib.rs
